# rusty-notepad

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  constants.rs  gpu.rs  main.rs  system_monitor.rs  theme.rs  ui.rs  weather.rs
