[package]
name = "rusty-notepad"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
rfd = "0.15"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
mach2 = "0.4"
